// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render dialog with instructions to connect to database 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 240px;
  flex: 0 0 auto;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c15 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
}

.c17 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c19 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c20:hover,
.c20:focus {
  background: #B29DFF;
}

.c20:active {
  background: #C5B6FF;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c22:hover,
.c22:focus {
  background: rgba(255,255,255,0.13);
}

.c22:active {
  background: rgba(255,255,255,0.18);
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  gap: 8px;
}

.c9 {
  display: flex;
  gap: 4px;
}

.c12 {
  display: flex;
  flex-direction: column;
}

.c16 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c18 {
  display: flex;
}

.c10 {
  display: block;
  outline: none;
  width: 24px;
  height: 24px;
}

.c21 {
  color: #009EFF;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.main"
        >
          <div
            class="c7 c8"
          >
            Connect to:
            <div
              class="c7 c9"
            >
              <img
                class="c10"
                data-testid="res-icon-postgres"
                height="24px"
                src="file_stub"
                width="24px"
              />
              aurora
            </div>
          </div>
        </div>
      </div>
      <div
        class="c11 c12"
      >
        <div
          class="c13"
        >
          <span
            class="c14"
          >
            Step 1
          </span>
           - Login to Teleport
          <div
            class="c15 c16"
            color="light"
          >
            <div
              class="c17 c18"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c19"
                style="user-select: none;"
              >
                $
              </div>
              <div>
                tsh login --proxy=localhost:443 --auth=local --user=yassine im-a-cluster
              </div>
            </div>
            <button
              class="c20"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c13"
        >
          <span
            class="c14"
          >
            Step 2
          </span>
           - Connect to the database
          <div
            class="c15 c16"
            color="light"
          >
            <div
              class="c17 c18"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c19"
                style="user-select: none;"
              >
                $
              </div>
              <div>
                tsh db connect aurora --db-user=&lt;user&gt; --db-name=&lt;name&gt;
              </div>
            </div>
            <button
              class="c20"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c7"
        >
          * Note: To connect with a GUI database client, see our 
          <a
            class="c21"
            href="https://goteleport.com/docs/connect-your-client/gui-clients/"
            rel="noreferrer"
            target="_blank"
          >
            documentation
          </a>
           for instructions.
        </div>
      </div>
      <div
        class="c7"
      >
        <button
          class="c22"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render dialog with instructions to connect to database with requestId 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 240px;
  flex: 0 0 auto;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c15 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
}

.c17 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c19 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c20:hover,
.c20:focus {
  background: #B29DFF;
}

.c20:active {
  background: #C5B6FF;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c22:hover,
.c22:focus {
  background: rgba(255,255,255,0.13);
}

.c22:active {
  background: rgba(255,255,255,0.18);
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  gap: 8px;
}

.c9 {
  display: flex;
  gap: 4px;
}

.c12 {
  display: flex;
  flex-direction: column;
}

.c16 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c18 {
  display: flex;
}

.c10 {
  display: block;
  outline: none;
  width: 24px;
  height: 24px;
}

.c21 {
  color: #009EFF;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
}

<body>
  <div />
  <div
    class="c0"
    data-testid="Modal"
  >
    <div
      aria-hidden="true"
      class="c1"
      data-testid="backdrop"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="dialogbox"
      >
        <div
          class="c4 c5"
        >
          <div
            class="c6"
            color="text.main"
          >
            <div
              class="c7 c8"
            >
              Connect to:
              <div
                class="c7 c9"
              >
                <img
                  class="c10"
                  data-testid="res-icon-postgres"
                  height="24px"
                  src="file_stub"
                  width="24px"
                />
                aurora
              </div>
            </div>
          </div>
        </div>
        <div
          class="c11 c12"
        >
          <div
            class="c13"
          >
            <span
              class="c14"
            >
              Step 1
            </span>
             - Login to Teleport
            <div
              class="c15 c16"
              color="light"
            >
              <div
                class="c17 c18"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c19"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 --auth=local --user=yassine im-a-cluster --request-id=e1e8072c-1eb8-5df4-a7bd-b6863b19271c
                </div>
              </div>
              <button
                class="c20"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c13"
          >
            <span
              class="c14"
            >
              Step 2
            </span>
             - Connect to the database
            <div
              class="c15 c16"
              color="light"
            >
              <div
                class="c17 c18"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c19"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh db connect aurora --db-user=&lt;user&gt; --db-name=&lt;name&gt;
                </div>
              </div>
              <button
                class="c20"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c13"
          >
            <span
              class="c14"
            >
              Step 3 (Optional)
            </span>
             - When finished, drop the assumed role
            <div
              class="c15 c16"
              color="light"
            >
              <div
                class="c17 c18"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c19"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh request drop
                </div>
              </div>
              <button
                class="c20"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            * Note: To connect with a GUI database client, see our 
            <a
              class="c21"
              href="https://goteleport.com/docs/connect-your-client/gui-clients/"
              rel="noreferrer"
              target="_blank"
            >
              documentation
            </a>
             for instructions.
          </div>
        </div>
        <div
          class="c7"
        >
          <button
            class="c22"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
